# crypto-index-fund-bot

./: .dockerignore  .env-example  .gitignore  .pylintrc  .tool-versions  Dockerfile  LICENSE  README.md  TODO  celery.sh  convert_stablecoins.py  cron.sh  data_types.py  docker-compose.yml  exchanges.py  external_portfolio_example.json  main.py  manage.py  market_buy.py  market_cap.py  open_orders.py  portfolio.py  pyproject.toml  user.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.sh  docker-compose.yml  post-create.sh  post-install.sh
.github/: dependabot.yml
.github/workflows/: django.yml  docker.yml
bot/: commands.py  convert_stablecoins.py  data_types.py  exchanges.py  limit_buy.py  market_buy.py  market_cap.py  open_orders.py  portfolio.py  user.py  utils.py
bot/supported_exchanges/: binance.py  coinbase.py
botweb/: asgi.py  settings.py  urls.py  wsgi.py
botweb/settings/: application.py  development.py  production.py  test.py
commands/: __init__.py  buy.py
scripts/: celery.sh  console.sh  secrets.sh  setup.sh
test/: __init__.py  conftest.py  test_binance.py  test_buy_command.py  test_cli.py  test_e2e.py  test_multi_user.py
test/cassettes/test_binance/: TestBinance.test_individual_and_batch_symbols.yaml
test/cassettes/test_buy_command/: TestBuyCommand.test_cancelling_stale_orders.yaml  TestBuyCommand.test_initial_buy.yaml  TestBuyCommand.test_off_allocation_portfolio.yaml  TestBuyCommand.test_percentage_allocation_limit.yaml
test/cassettes/test_cli/: TestCLI.test_analyze.yaml  TestCLI.test_index.yaml  TestCLI.test_market_buy.yaml  TestCLI.test_portfolio.yaml
users/: celery.py  commands.py  models.py  tasks.py
users/management/commands/: export_user.py
users/migrations/: 0001_initial.py  0002_auto_20211120_1742.py  0002_auto_20211120_1933.py
