[tool.poetry]
name = "crypto-index-fund-bot"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co>"]

[tool.poetry.dependencies]
python = "^3.9"
python-binance = "^1.0.12"
tabulate = "^0.8.9"
coinbasepro = "^0.3.0"
structlog = "^21.1.0"
python-dotenv = "^0.18.0"
rich = "^10.6.0"
click = "^8.0.1"
Django = "^3.2.6"
psycopg2 = "^2.9.1"
celery = {version = "^5.1.2", allow-prereleases = true}
redis = "^3.5.3"
django-structlog = "^2.1.1"

[tool.poetry.dev-dependencies]
# vcrpy = {path = "../../python/vcrpy", develop = true }
vcrpy = { git = "https://github.com/iloveitaly/vcrpy.git", branch = "deduped-cassettes", develop = true }
ipython = "^7.25.0"
ipdb = "^0.13.8"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-recording = "^0.12.0"
django-extensions = "^3.1.3"
colorama = "^0.4.4"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest]
log_cli = true