[tool.poetry]
name = "crypto-index-fund-bot"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co>"]

[tool.poetry.dependencies]
python = ">=3.9.6,<=3.10"
python-binance = "^1.0.15"
tabulate = "^0.8.9"
coinbasepro = "^0.3.0"
structlog = "^21.1.0"
rich = "^10.6.0"
click = "^8.0.1"
Django = "^3.2.6"
psycopg2 = "^2.9.1"
celery = {version = "^5.2.0rc1", allow-prereleases = true}
redis = "^3.5.3"
django-structlog = "^2.1.3"
dj-database-url = "^0.5.0"
django-extensions = "^3.1.3"
django-encrypted-model-fields = "^0.6.0"
python-decouple = "^3.4"
sentry-sdk = "^1.3.1"
django-redis = "^5.0.0"
ipython = "^7.28.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
# TODO must use custom branch until this is merged: https://github.com/kevin1024/vcrpy/pull/603
# vcrpy = {path = "../../python/vcrpy", develop = true }
vcrpy = { git = "https://github.com/iloveitaly/vcrpy.git", branch = "deduped-cassettes", develop = true }
ipdb = "^0.13.8"
pytest = "^6.2.5"
pytest-recording = "^0.12.0"
colorama = "^0.4.4"
pylint = "^2.10.2"
pytest-django = "^4.4.0"
pytest-celery = "^0.0.0"
black = "^21.8b0"
pylint-django = "^2.4.4"
pylint-celery = "^0.3"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
DJANGO_SETTINGS_MODULE = "botweb.settings.test"

[tool.black]
line-length=150
target-version=['py39']
exclude = '''
/(
  .venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3