[tool.poetry]
name = "crypto-index-fund-bot"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co>"]

[tool.poetry.dependencies]
python = ">=3.9.6,<=3.10"
python-binance = "^1.0.15"
tabulate = "^0.8.10"
coinbasepro = "^0.3.1"
structlog = "^22.1.0"
rich = "^12.5.1"
click = "^8.1.3"
Django = "^3.2.9"
psycopg2 = "^2.9.3"
celery = {version = "^5.2.6", allow-prereleases = true}
redis = "^4.3.4"
django-structlog = "^3.0.1"
dj-database-url = "^1.0.0"
django-extensions = "^3.2.0"
django-encrypted-model-fields = "^0.6.5"
python-decouple = "^3.6"
sentry-sdk = "^1.8.0"
django-redis = "^5.2.0"
ipython = "^8.4.0"
requests = "^2.28.1"
# lock to 3.4.x to avoid rust compilation issues
cryptography = "37.0.4"
pylint-pytest = "^1.1.2"

[tool.poetry.dev-dependencies]
# TODO must use custom branch until this is merged: https://github.com/kevin1024/vcrpy/pull/603
# vcrpy = {path = "../../python/vcrpy", develop = true }
vcrpy = { git = "https://github.com/iloveitaly/vcrpy.git", branch = "deduped-cassettes", develop = true }
ipdb = "^0.13.8"
pytest = "^7.1.2"
pytest-recording = "^0.12.1"
colorama = "^0.4.5"
pylint = "^2.14.5"
pytest-django = "^4.5.2"
pytest-celery = "^0.0.0"
black = "^22.6"
pylint-django = "^2.5.3"
pylint-celery = "^0.3"
isort = "^5.10.1"
ccxt = "^1.92.53"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
DJANGO_SETTINGS_MODULE = "botweb.settings.test"
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[tool.black]
line-length=150
target-version=['py39']
exclude = '''
/(
  .venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pyright]